# STM32MP2

./: LICENSE
.github/workflows/: build.yml
stm32mp257fdk-project/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
stm32mp257fdk-project/.github/workflows/: build.yml  ci.yml
stm32mp257fdk-project/cortex-a35/: CMakeLists.txt
stm32mp257fdk-project/cortex-a35/app/include/: ipc_rpmsg.h  ota_manager.h
stm32mp257fdk-project/cortex-a35/app/src/: ipc_rpmsg.cpp  main.cpp  ota_cli.cpp  ota_manager.cpp
stm32mp257fdk-project/cortex-a35/app/tests/: test_main.cpp
stm32mp257fdk-project/cortex-a35/cmake/: toolchain-aarch64.cmake
stm32mp257fdk-project/cortex-m33/: CMakeLists.txt  STM32MP257FAIX_FLASH.ld
stm32mp257fdk-project/cortex-m33/Core/Inc/: fw_version.h  ipc_handler.h  main.h  stm32mp2xx_hal_conf.h  stm32mp2xx_it.h  uart_log.h
stm32mp257fdk-project/cortex-m33/Core/Src/: ipc_handler.c  main.c  stm32mp2xx_hal_msp.c  stm32mp2xx_it.c  syscalls.c  system_stm32mp2xx.c  uart_log.c
stm32mp257fdk-project/cortex-m33/Core/Startup/: startup_stm32mp257fxx_m33.s
stm32mp257fdk-project/cortex-m33/Drivers/CMSIS/Device/ST/STM32MP2xx/: Release_Notes.html  Release_Notes.md
stm32mp257fdk-project/cortex-m33/Drivers/CMSIS/Device/ST/STM32MP2xx/Include/: stm32mp211axx_ca35.h  stm32mp211axx_cm33.h  stm32mp211cxx_ca35.h  stm32mp211dxx_ca35.h  stm32mp211dxx_cm33.h  stm32mp211fxx_ca35.h  stm32mp213axx_ca35.h  stm32mp213dxx_ca35.h
stm32mp257fdk-project/cortex-m33/Drivers/CMSIS/Device/ST/STM32MP2xx/Source/Templates/: mmu_stm32mp2xx.c
stm32mp257fdk-project/cortex-m33/Drivers/CMSIS/Device/ST/STM32MP2xx/Source/Templates/gcc/: startup_stm32mp211axx_m33.s  startup_stm32mp211cxx_m33.s  startup_stm32mp211dxx_m33.s  startup_stm32mp211fxx_m33.s  startup_stm32mp213axx_m33.s  startup_stm32mp213cxx_m33.s  startup_stm32mp213dxx_m33.s  startup_stm32mp213fxx_m33.s  startup_stm32mp215axx_m33.s  startup_stm32mp215cxx_m33.s  startup_stm32mp215dxx_m33.s  startup_stm32mp215fxx_m33.s  startup_stm32mp21xx_m33.S  startup_stm32mp21xx_m33_ns.S  startup_stm32mp231axx_m33.s  startup_stm32mp231cxx_m33.s  startup_stm32mp231dxx_m33.s  startup_stm32mp231fxx_m33.s  startup_stm32mp233axx_m33.s  startup_stm32mp233cxx_m33.s  startup_stm32mp233dxx_m33.s  startup_stm32mp233fxx_m33.s  startup_stm32mp235axx_m33.s  startup_stm32mp235cxx_m33.s  startup_stm32mp235dxx_m33.s  startup_stm32mp235fxx_m33.s  startup_stm32mp251axx_m33.s  startup_stm32mp251cxx_m33.s  startup_stm32mp251dxx_m33.s  startup_stm32mp251fxx_m33.s  startup_stm32mp253axx_m33.s  startup_stm32mp253cxx_m33.s  startup_stm32mp253dxx_m33.s  startup_stm32mp253fxx_m33.s  startup_stm32mp255axx_m33.s  startup_stm32mp255cxx_m33.s  startup_stm32mp255dxx_m33.s  startup_stm32mp255fxx_m33.s  startup_stm32mp257axx_m33.s  startup_stm32mp257cxx_m33.s  (+2 more)
stm32mp257fdk-project/cortex-m33/Drivers/CMSIS/Device/ST/STM32MP2xx/Source/Templates/gcc/linker/: stm32mp21xx_DDR_a35.ld
stm32mp257fdk-project/cortex-m33/Drivers/STM32MP2xx_HAL_Driver/: Release_Notes.html
stm32mp257fdk-project/cortex-m33/Drivers/STM32MP2xx_HAL_Driver/Src/: stm32mp2xx_hal_dcmipp.c
stm32mp257fdk-project/cortex-m33/cmake/: toolchain-m33.cmake
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/: .mxproject  CMakeLists.txt  CMakePresets.json  stm32mp257fdk_m33.inc  stm32mp257fdk_m33.ioc
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CA35/DeviceTree/stm32mp257fdk_m33/kernel/: stm32mp257f-stm32mp257fdk_m33-mx-resmem.dtsi  stm32mp257f-stm32mp257fdk_m33-mx.dts
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CA35/DeviceTree/stm32mp257fdk_m33/optee-os/: conf.mk  stm32mp257f-stm32mp257fdk_m33-mx-rcc.dtsi  stm32mp257f-stm32mp257fdk_m33-mx-resmem.dtsi  stm32mp257f-stm32mp257fdk_m33-mx-rif.dtsi  stm32mp257f-stm32mp257fdk_m33-mx.dts
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CA35/DeviceTree/stm32mp257fdk_m33/tf-a/: stm32mp25-mx.dtsi  stm32mp257f-stm32mp257fdk_m33-mx-fw-config.dts  stm32mp257f-stm32mp257fdk_m33-mx-rcc.dtsi  stm32mp257f-stm32mp257fdk_m33-mx.dts
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CA35/DeviceTree/stm32mp257fdk_m33/u-boot/: stm32mp257f-stm32mp257fdk_m33-mx-u-boot.dtsi  stm32mp257f-stm32mp257fdk_m33-mx.dts
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CM33/: CMakeLists.txt  CMakePresets.json  STM32MP25XX_FLASH.ld
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CM33/Core/Inc/: main.h  stm32mp2xx_hal_conf.h  stm32mp2xx_it.h
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/CM33/Core/Src/: main.c  stm32mp2xx_hal_msp.c  stm32mp2xx_it.c
stm32mp257fdk-project/cortex-m33/stm32mp257fdk_m33/Utilities/CoproSync/: copro_sync.c
stm32mp257fdk-project/scripts/: build_all.sh  flash_m33.sh  start_m33_remoteproc.sh
stm32mp257fdk-project/shared/ipc/: resource_table.c  resource_table.h  virt_uart.h
